--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 </div>
                                 <div class="separator my-2"></div>
                                 <div class="menu-item px-2">
-                                    <a href="#" class="menu-link px-5">Sign
+                                    <a href="login.html" class="menu-link px-5">Sign
                                         Out</a>
                                 </div>
                             </div>
@@ -368,6 +368,7 @@
                                             <p>92512</p>
                                         </li>
                                     </ul>
+                                    <button type="button" class="restart--port">Restart Port</button>
                                 </div>
                             </div>
                         </div>
@@ -1202,7 +1203,7 @@
                 <h4>Assia <span></span></h4>
                 <ul>
                     <li>clear view</li>
-                    <li>SELT</li>
+                    <li class="active">SELT</li>
                     <li>diagnostic-RT</li>
                     <li>RealTime-diagnostic</li>
                     <li>service-recommendtion</li>
