--- a/index-loader-box.html
+++ b/index-loader-box.html
@@ -222,6 +222,12 @@
                                 </ul>
                                 <ul class="bottom-part">
                                     <li class="balance">
+                                        <div class="loader-spin">
+                                            <div class="spinner">
+                                                <div class="double-bounce1"></div>
+                                                <div class="double-bounce2"></div>
+                                            </div>
+                                        </div>
                                         <span>Current Balance</span>
                                         <h3>280.40<em>LE</em></h3>
                                         <div class="loader-ellipsis">
@@ -239,6 +245,12 @@
                                         <img src="assets/media/icons/indigo-plus-EN.png" alt="">
                                     </li>
                                     <li>
+                                        <div class="loader-spin">
+                                            <div class="spinner">
+                                                <div class="double-bounce1"></div>
+                                                <div class="double-bounce2"></div>
+                                            </div>
+                                        </div>
                                         <div>
                                             <span>Product Type</span>
                                             <p>Fixed Broadband</p>
@@ -246,6 +258,12 @@
                                         <img src="assets/media/icons/ProductType.svg" alt="">
                                     </li>
                                     <li>
+                                        <div class="loader-spin">
+                                            <div class="spinner">
+                                                <div class="double-bounce1"></div>
+                                                <div class="double-bounce2"></div>
+                                            </div>
+                                        </div>
                                         <div>
                                             <span>Subscriber Type</span>
                                             <p>Corporate</p>
@@ -258,6 +276,12 @@
                         <div class="flex-cards">
                             <div class="card management">
                                 <div class="card-body">
+                                    <div class="loader-spin">
+                                        <div class="spinner">
+                                            <div class="double-bounce1"></div>
+                                            <div class="double-bounce2"></div>
+                                        </div>
+                                    </div>
                                     <a href="javascript:;" class="refresh">
                                         <img src="assets/media/icons/icon-process.svg" alt="">
                                     </a>
@@ -290,6 +314,12 @@
                             </div>
                             <div class="card loyalty">
                                 <div class="card-body">
+                                    <div class="loader-spin">
+                                        <div class="spinner">
+                                            <div class="double-bounce1"></div>
+                                            <div class="double-bounce2"></div>
+                                        </div>
+                                    </div>
                                     <a href="javascript:;" class="refresh">
                                         <img src="assets/media/icons/icon-process.svg" alt="">
                                     </a>
