--- a/index-loader.html
+++ b/index-loader.html
@@ -1243,6 +1243,14 @@
         </span>
     </div>
 
+    <div class="center-loader">
+        <div class="loader-circle-9">
+            Loading
+          <span></span>
+        </div>
+        <img src="assets/media/logo.svg" alt="">
+    </div>
+
     <!--begin::Javascript-->
     <script src="assets/plugins/global/plugins.bundle.js"></script>
     <script src="assets/plugins/apexcharts.min.js"></script>
