--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                     <div class="header-login">
                         <img src="assets/media/logo.svg" alt="">
                         <h2>Welcome to Customer 360 👋🏻 </h2>
-                        <p>Best Way To Control Customer Line</p>
+                        <p>One account, All of Customer-360 working for you.</p>
                     </div>
                     <div class="fv-row mb-5">
                         <input type="text" placeholder="Email" name="email" autocomplete="off" class="form-control" />
