--- a/index-not-found.html
+++ b/index-not-found.html
@@ -165,7 +165,7 @@
             <div class="wrapper d-flex flex-column flex-row-fluid container-xxl">
                 <div class="d-flex flex-row flex-column-fluid align-items-stretch">
                     <div class="not-found">
-                        <img src="assets/media/not-found.png" alt="">
+                        <img src="assets/media/search.png" alt="">
                         <h3>Subscriber information is not exist</h3>
                     </div>
                 </div>
