--- a/index-welcome.html
+++ b/index-welcome.html
@@ -165,7 +165,7 @@
             <div class="wrapper d-flex flex-column flex-row-fluid container-xxl">
                 <div class="d-flex flex-row flex-column-fluid align-items-stretch">
                     <div class="before-search">
-                        <img src="assets/media/welcome.png" alt="">
+                        <img src="assets/media/login.svg" alt="">
                     </div>
                 </div>
 
