--- a/index-not-found.html
+++ b/index-not-found.html
@@ -8,8 +8,10 @@
     <meta name="keywords" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="assets/media/logo.svg" />
+    <link href="assets/plugins/datatable/datatables.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/light-mode.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled">
@@ -35,6 +37,7 @@
                         </div>
                         <a href="index.html">
                             <img alt="Logo" src="assets/media/logo.svg" class="logo-header" />
+                            <img alt="Logo" src="assets/media/logo-light.svg" class="logo-light" />
                         </a>
                         <div class="links-header">
                             <a href="#" class="active">Home</a>
@@ -105,8 +108,8 @@
 
                         <!--begin::Theme mode-->
                         <div class="d-flex align-items-center">
-                            <a href="#" class="btn btn-icon btn-custom w-30px h-30px w-md-40px h-md-40px">
-                                <span class="svg-icon theme-dark-show svg-icon-2">
+                            <a href="#" class="toggle-mode btn btn-icon btn-custom w-30px h-30px w-md-40px h-md-40px">
+                                <span class="svg-icon theme-light-show svg-icon-2">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -138,7 +141,7 @@
                                             fill="currentColor" />
                                     </svg>
                                 </span>
-                                <span class="svg-icon theme-light-show  svg-icon-2">
+                                <span class="svg-icon theme-dark-show  svg-icon-2">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -200,62 +203,9 @@
     <script src="assets/plugins/global/plugins.bundle.js"></script>
     <script src="assets/plugins/apexcharts.min.js"></script>
     <script src="assets/plugins/circle-progress.js"></script>
+    <script src="assets/plugins/datatable/datatables.bundle.js"></script>
     <script src="assets/js/scripts.bundle.js"></script>
     <script src="assets/js/scripts-custom.js"></script>
-    <script>
-        new CircleProgress('.loyalty-chart', {
-            min: 0,
-            max: 100,
-            value: 68,
-            clockwise: false,
-            textFormat: 'percent',
-            animationDuration: 1000
-        });
-    </script>
-    <script>
-        const maxValue = 100;
-        const minValue = 0;
-        const valueToPercent = (val) => ((val - minValue) * 100) / (maxValue - minValue);
-        var options = {
-            series: [valueToPercent(25)],
-            colors: ["#ffc107"],
-            chart: {
-                height: 300,
-                type: 'radialBar',
-                sparkline: {
-                    enabled: true
-                },
-                animations: {
-                    enabled: true,
-                    easing: 'linear',
-                    speed: 3000,
-                }
-            },
-            plotOptions: {
-                radialBar: {
-                    hollow: {
-                        margin: 0,
-                        size: '60%'
-                    },
-                    startAngle: -90,
-                    endAngle: 90,
-                    dataLabels: {
-                        value: {
-                            color: undefined,
-                            formatter: (val) => (val * (maxValue - minValue)) / 100 + minValue,
-                        }
-                    },
-                    track: {
-                        strokeWidth: '100%'
-                    },
-                }
-            },
-            labels: [''],
-        };
-
-        var chart = new ApexCharts(document.querySelector(".progress-consumed"), options);
-        chart.render();
-    </script>
 </body>
 
 </html>
