--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                 <form class="form w-100" action="#">
                     <div class="header-login">
                         <img src="assets/media/logo.svg" alt="">
-                        <h2>Welcome to Customer 360 👋🏻 </h2>
+                        <h2>Welcome to Customer 360</h2>
                         <p>One account, All of Customer-360 working for you.</p>
                     </div>
                     <div class="fv-row mb-5">
