--- a/index.html
+++ b/index.html
@@ -21,20 +21,6 @@
             <div class="header">
                 <div class="header-top-container container-xxl sabi d-flex">
                     <div class="d-flex align-items-center">
-                        <div class="d-lg-none btn btn-icon btn-active-color-300 w-30px h-30px me-2"
-                            id="kt_header_menu_toggle">
-                            <span class="svg-icon svg-icon-2">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M21 7H3C2.4 7 2 6.6 2 6V4C2 3.4 2.4 3 3 3H21C21.6 3 22 3.4 22 4V6C22 6.6 21.6 7 21 7Z"
-                                        fill="currentColor" />
-                                    <path opacity="0.3"
-                                        d="M21 14H3C2.4 14 2 13.6 2 13V11C2 10.4 2.4 10 3 10H21C21.6 10 22 10.4 22 11V13C22 13.6 21.6 14 21 14ZM22 20V18C22 17.4 21.6 17 21 17H3C2.4 17 2 17.4 2 18V20C2 20.6 2.4 21 3 21H21C21.6 21 22 20.6 22 20Z"
-                                        fill="currentColor" />
-                                </svg>
-                            </span>
-                        </div>
                         <a href="index.html">
                             <img alt="Logo" src="assets/media/logo.svg" class="logo-header" />
                             <img alt="Logo" src="assets/media/logo-light.svg" class="logo-light" />
@@ -47,25 +33,10 @@
                     </div>
                     <!--begin::Toolbar wrapper-->
                     <div class="topbar d-flex" id="kt_topbar">
-                        <div class="d-flex align-items-center ms-2 ms-lg-3">
+                        <div class="d-flex align-items-center search-head">
                             <div class="header-search d-flex align-items-center topbar-search w-lg-300px">
-                                <!--begin::Tablet and mobile search toggle-->
-                                <div data-kt-search-element="toggle" class="d-flex d-lg-none align-items-center">
-                                    <div class="btn btn-icon btn-icon-gray-300 w-30px h-30px w-md-40px h-md-40px">
-                                        <span class="svg-icon svg-icon-1">
-                                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2"
-                                                    rx="1" transform="rotate(45 17.0365 15.1223)" fill="currentColor" />
-                                                <path
-                                                    d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z"
-                                                    fill="currentColor" />
-                                            </svg>
-                                        </span>
-                                    </div>
-                                </div>
                                 <!--end::Tablet and mobile search toggle-->
-                                <form class="d-none d-lg-block w-100 position-relative mb-5 mb-lg-0" autocomplete="off">
+                                <form class="w-100 position-relative" autocomplete="off">
                                     <span
                                         class="svg-icon svg-icon-2 svg-icon-lg-3 svg-icon-gray-800 position-absolute top-50 translate-middle-y ms-5">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -192,11 +163,11 @@
                                 </a>
                                 <ul class="top-part">
                                     <li>
-                                        <span>Account no. :</span>
+                                        <span>Account no.:</span>
                                         <p><em>#</em>51423805</p>
                                     </li>
                                     <li>
-                                        <span>Offer Status :</span>
+                                        <span>Offer Status:</span>
                                         <div class="status active">
                                             <img src="assets/media/icons/Interface-success.svg" alt="">
                                             Active
@@ -207,19 +178,19 @@
                                         </div> -->
                                     </li>
                                     <li>
-                                        <span>Offer Due Date :</span>
+                                        <span>Offer Due Date:</span>
                                         <p><img src="assets/media/icons/calendar.svg" alt="">31/12/2012</p>
                                     </li>
                                     <li>
-                                        <span>Customer Segmentation :</span>
+                                        <span>Customer Segmentation:</span>
                                         <p class="vip"><img src="assets/media/icons/vip.svg" alt="">VIP</p>
                                     </li>
                                     <li>
-                                        <span>Group Name :</span>
+                                        <span>Group Name:</span>
                                         <p>Lorem Ipsum</p>
                                     </li>
                                     <li>
-                                        <span>Card Type :</span>
+                                        <span>Card Type:</span>
                                         <p><img src="assets/media/icons/fiber-optic.svg" alt="">FTTH</p>
                                     </li>
                                 </ul>
@@ -487,13 +458,13 @@
                                                             <p>
                                                                 <img src="assets/media/icons/certificate.svg" alt="">
                                                                 Certificate No.:</p>
-                                                            <input type="password" value="12345678910111">
+                                                            <input type="password" value="12345678910111" readonly>
                                                         </li>
                                                         <li>
                                                             <p>
                                                                 <img src="assets/media/icons/certificate.svg" alt="">
                                                                 Certificate Type:</p>
-                                                            <input type="password" value="National ID">
+                                                            <input type="password" value="National ID" readonly>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -507,7 +478,7 @@
                                                             <p>
                                                                 <img src="assets/media/icons/telephone.svg" alt="">
                                                                 Phone No.:</p>
-                                                            <input type="password" value="32456474">
+                                                            <input type="password" value="32456474" readonly>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -1271,7 +1242,7 @@
             series: [valueToPercent(25)],
             colors: ["#ffc107"],
             chart: {
-                height: 300,
+                height: 280,
                 type: 'radialBar',
                 sparkline: {
                     enabled: true
