--- a/index-loader-box.html
+++ b/index-loader-box.html
@@ -477,7 +477,7 @@
                                     <div class="tab-pane fade active show" id="fastinfo" role="tabpanel">
                                         <div class="dts-box">
                                             <h3 class="client-name">Mr. Ahmed Mohamed Ahmed Saleh</h3>
-                                            <div class="certificate--phone">
+                                            <div class="private-dts">
                                                 <div class="certificate">
                                                     <div
                                                         class="form-check form-switch form-check-custom form-check-solid">
