--- a/index.html
+++ b/index.html
@@ -262,32 +262,15 @@
                                         <img src="assets/media/icons/icon-process.svg" alt="">
                                     </button>
                                     <h3 class="title-card">Loyalty Points</h3>
-                                    <div class="total-points">
-                                        <img src="assets/media/icons/star-coin.svg" alt="">
-                                        <h3>1,500</h3>
-                                        <span>Total Points</span>
-                                    </div>
                                     <div class="loyalty-statistics">
-                                        <div class="loyalty-chart"></div>
-                                        <ul class="remaining-consumed">
-                                            <li>
-                                                <h6 class="consumed-points">
-                                                    <em></em>
-                                                    Consumed
-                                                </h6>
-                                                <p>1,000<span>Points</span></p>
-                                            </li>
-                                            <li>
-                                                <h6 class="remaining-points">
-                                                    <em></em>
-                                                    Remaining
-                                                </h6>
-                                                <p>500<span>Points</span></p>
-                                            </li>
-                                        </ul>
+                                        <h3>Balance</h3>
+                                        <h4>2206</h4>
+                                        <span>pts</span>
+                                        <span>=</span>
+                                        <p>110.30 EGP</p>
                                     </div>
                                     <button type="button" class="points--dts" data-bs-toggle="modal"
-                                        data-bs-target="#loyality-details">points details</button>
+                                        data-bs-target="#loyality-details">points history</button>
                                 </div>
                             </div>
                             <div class="card port">
@@ -1647,7 +1630,7 @@
                 <ul>
                     <li>get mac address</li>
                     <li>adjust status</li>
-                    <li>get ADSL availablitiy</li>
+                    <li data-bs-toggle="modal" data-bs-target="#kt_modal_UnifiedCheckAvailability">get ADSL availablitiy</li>
                     <li>restart-port</li>
                     <li>update-NPID</li>
                     <li>get online service</li>
@@ -1739,67 +1722,63 @@
 
     <!-- loyality-details -->
     <div class="modal fade" id="loyality-details" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5">Loyalty Details</h1>
+                    <h1 class="modal-title fs-5">Point history</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <ul class="popup-ul">
-                        <li>
-                            <p>Current Amount</p>
-                            <span>60.50</span>
-                        </li>
-                        <li>
-                            <p>Current Points</p>
-                            <span>1500</span>
-                        </li>
-                        <li>
-                            <p>customer ID</p>
-                            <span>324344457</span>
-                        </li>
-                        <li>
-                            <p>service Number</p>
-                            <span>15546882</span>
-                        </li>
-                        <li>
-                            <p>total points accumulated</p>
-                            <span>5893</span>
-                        </li>
-                        <li>
-                            <p>Total points cancelled</p>
-                            <span>0</span>
-                        </li>
-                        <li>
-                            <p>Total Points Expired</p>
-                            <span>0</span>
-                        </li>
-                        <li>
-                            <p>Total points redeemed</p>
-                            <span>2256</span>
-                        </li>
-                        <li>
-                            <p>Total points refunded</p>
-                            <span>0</span>
-                        </li>
-                        <li>
-                            <p>wallet Status:</p>
-                            <div class="status active">
-                                <img src="assets/media/icons/Interface-success.svg" alt="">
-                                Active
+                        <div class="nav nav-tabs tabs-modal" id="nav-tab" role="tablist">
+                            <button class="nav-link active" id="accumulation-tab" data-bs-toggle="tab" data-bs-target="#accumulation" type="button" role="tab" aria-selected="true">accumulation</button>
+                            <button class="nav-link" id="redemption-tab" data-bs-toggle="tab" data-bs-target="#redemption" type="button" role="tab" aria-selected="false">redemption</button>
+                        </div>
+                      <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="accumulation" role="tabpanel" aria-labelledby="accumulation-tab">
+                            <div class="table-responsive">
+                                <table class="table datatable table-row-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th>Transaction date</th>
+                                            <th>Amount</th>
+                                            <th>payment Method</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>15/1/2023</td>
+                                            <td>
+                                                <p><b>200</b> points</p>
+                                            </td>
+                                            <td>mobile application</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
-                            <!-- <div class="status disabled">
-                                <img src="assets/media/icons/Interface-danger.svg"
-                                    alt="">
-                                Disabled
-                            </div> -->
-                        </li>
-                        <li>
-                            <p>row key:</p>
-                            <span>114565756</span>
-                        </li>
-                    </ul>
+                        </div>
+                        <div class="tab-pane fade" id="redemption" role="tabpanel" aria-labelledby="redemption-tab">
+                            <div class="table-responsive">
+                                <table class="table datatable table-row-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th>Transaction date</th>
+                                            <th>Amount</th>
+                                            <th>payment Method</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>15/1/2023</td>
+                                            <td>
+                                                <p><b>200</b> points</p>
+                                            </td>
+                                            <td>mobile application</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
@@ -2551,6 +2530,168 @@
             </div>
         </div>
     </div>
+
+        <!-- ADSL Availability -->
+        <div class="modal fade" id="kt_modal_UnifiedCheckAvailability" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-fullscreen">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5">ADSL Availability</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="flex-box-div">
+                            <ul class="popup-ul">
+                                <h3>More Information</h3>
+                                <li>
+                                    <p>Area Code</p>
+                                    <span>{{UnifiedCheckAvailability.AreaCode}}</span>
+                                </li>
+                                <li>
+                                    <p>Congested Pop</p>
+                                    <span>{{UnifiedCheckAvailability.CongestedPop}}</span>
+                                </li>
+                                <li>
+                                    <p>Currant Service</p>
+                                    <span>{{UnifiedCheckAvailability.CurrantService}}</span>
+                                </li>
+                                <li>
+                                    <p>HW Type</p>
+                                    <span>{{UnifiedCheckAvailability.HWType}}</span>
+                                </li>
+                                <li>
+                                    <p>Has SV Card</p>
+                                    <span>{{UnifiedCheckAvailability.HasSVCard}}</span>
+                                </li>
+                                <li>
+                                    <p>Has VDSL Card</p>
+                                    <span>{{UnifiedCheckAvailability.HasVDSLCard}}</span>
+                                </li>
+                                <li>
+                                    <p>IS POP VDSL Support</p>
+                                    <span>{{UnifiedCheckAvailability.ISPOPVDSLSupport}}</span>
+                                </li>
+                                <li>
+                                    <p>Is Customer Exist</p>
+                                    <span>{{UnifiedCheckAvailability.IsCustomerExist}}</span>
+                                </li>
+                                <li>
+                                    <p>Is POP SV Support</p>
+                                    <span>{{UnifiedCheckAvailability.IsPOPSVSupport}}</span>
+                                </li>
+                                <li>
+                                    <p>Is SVPort</p>
+                                    <span>{{UnifiedCheckAvailability.IsSVPort}}</span>
+                                </li>
+                                <li>
+                                    <p>Is VDSL Port</p>
+                                    <span>{{UnifiedCheckAvailability.IsVDSLPort}}</span>
+                                </li>
+                                <li>
+                                    <p>Line Owner Name</p>
+                                    <span>{{UnifiedCheckAvailability.LineOwnerName}}</span>
+                                </li>
+                                <li>
+                                    <p>Line Status</p>
+                                    <span>{{UnifiedCheckAvailability.LineStatus}}</span>
+                                </li>
+                                <li>
+                                    <p>Loop Length</p>
+                                    <span>{{UnifiedCheckAvailability.LoopLength}}</span>
+                                </li>
+                                <li>
+                                    <p>Phone No</p>
+                                    <span>{{UnifiedCheckAvailability.PhoneNo}}</span>
+                                </li>
+                                <li>
+                                    <p>Status Code</p>
+                                    <span>{{UnifiedCheckAvailability.StatusCode}}</span>
+                                </li>
+                                <li>
+                                    <p>Status Desc</p>
+                                    <span>{{UnifiedCheckAvailability.StatusDesc}}</span>
+                                </li>
+                                <li>
+                                    <p>TEArabic Name</p>
+                                    <span>{{UnifiedCheckAvailability.TEArabicName}}</span>
+                                </li>
+                                <li>
+                                    <p>TEMSAN Code</p>
+                                    <span>{{UnifiedCheckAvailability.TEMSANCode}}</span>
+                                </li>
+                            </ul>
+                            <ul class="popup-ul">
+                                <h3>Pop Data</h3>
+                                <li>
+                                    <p>Area Code</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.AreaCode}}</span>
+                                </li>
+                                <li>
+                                    <p>City</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.City}}</span>
+                                </li>
+                                <li>
+                                    <p>City Arabic</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.CityArabic}}</span>
+                                </li>
+                                <li>
+                                    <p>Is SDS</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.IsSDS}}</span>
+                                </li>
+                                <li>
+                                    <p>Parent Pop Name</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.ParentPopName}}</span>
+                                </li>
+                                <li>
+                                    <p>Pop AR Name</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.PopARName}}</span>
+                                </li>
+                                <li>
+                                    <p>Pop ID</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.PopID}}</span>
+                                </li>
+                                <li>
+                                    <p>Pop Name</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.PopName}}</span>
+                                </li>
+                                <li>
+                                    <p>Pop Type</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.PopType}}</span>
+                                </li>
+                                <li>
+                                    <p>Sector</p>
+                                    <span>{{UnifiedCheckAvailability.PopData.Sector}}</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table datatable table-row-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>Eligible Service</th>
+                                        <th>Expected Speed</th>
+                                        <th>IPTV</th>
+                                        <th>Is Free Installation</th>
+                                        <th>Recommended Speed</th>
+                                        <th>SLA</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>{{unifiedCheckAvailability.EligibleService}}</td>
+                                        <td>{{unifiedCheckAvailability.ExpectedSpeed}}</td>
+                                        <td>{{unifiedCheckAvailability.IPTV}}</td>
+                                        <td>{{unifiedCheckAvailability.IsFreeInstallation}}</td>
+                                        <td>{{unifiedCheckAvailability.RecommendedpSeed}}</td>
+                                        <td>{{unifiedCheckAvailability.SLA}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!--begin::Javascript-->
     <script src="assets/plugins/global/plugins.bundle.js"></script>
