--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                             <img alt="Logo" src="assets/media/logo-light.svg" class="logo-light" />
                         </a>
                         <div class="links-header">
-                            <a href="#" class="active">Home</a>
-                            <a href="#">Wifi Logs</a>
+                            <a href="index.html" class="active">Home</a>
+                            <a href="wifi-logs.html">Wifi Logs</a>
                         </div>
                     </div>
                     <!--begin::Toolbar wrapper-->
