--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
                                         <span>pts</span>
                                         <span>=</span>
                                         <p>110.30 EGP</p>
+                                        <h5>date expire</h5>
+                                        <h6>18/02/2023</h6>
                                     </div>
                                     <button type="button" class="points--dts" data-bs-toggle="modal"
                                         data-bs-target="#loyality-details">points history</button>
@@ -532,6 +534,9 @@
                                                 </div>
                                                 <div class="part-info">
                                                     <h3 class="title-part">Info Subscriber</h3>
+                                                    <button class="refresh">
+                                                        <img src="assets/media/icons/icon-process.svg" alt="">
+                                                    </button>
                                                     <ul class="info-ul">
                                                         <li>
                                                             <p>activation date:</p>
