--- a/wifi-logs.html
+++ b/wifi-logs.html
@@ -126,6 +126,7 @@
                 <div class="d-flex flex-row flex-column-fluid align-items-stretch">
                     <div class="card w-100 mt-12">
                         <div class="card-body">
+                            <h3 class="title-card mb-7">wifi logs</h3>
                             <div class="table-responsive">
                                 <table class="table datatable table-row-bordered">
                                     <thead>
